@startuml

title __PLUGIN-POSTGRESQL's Class Diagram__\n

  namespace it.almaviva.eai.zeebe.usertask.data.entity {
    class it.almaviva.eai.zeebe.usertask.data.entity.LocalDateTimeConverter {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.entity {
    class it.almaviva.eai.zeebe.usertask.data.entity.TaskEntity {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.mapper {
    interface it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapper {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.mapper {
    class it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapperImpl {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.repository {
    interface it.almaviva.eai.zeebe.usertask.data.repository.SpringDataUserTaskRepository {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.repository {
    class it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository {
    }
  }
  

  it.almaviva.eai.zeebe.usertask.data.entity.LocalDateTimeConverter .up.|> javax.persistence.AttributeConverter
  it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapperImpl .up.|> it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapper
  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository .up.|> it.almaviva.eai.zeebe.usertask.port.outgoing.ITaskPort
  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository o-- it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapper : iTaskMapper
  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository o-- it.almaviva.eai.zeebe.usertask.data.repository.SpringDataUserTaskRepository : springDataUserTaskRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
